fixed overflow on small devices

--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -67,6 +67,15 @@
   margin-right: 100px;
 }
 
+@media only screen and (max-width: 420px) {
+  .label {
+    font-size: 18px;
+  }
+  .email {
+    font-size: 36px;
+  }
+}
+
 @media only screen and (max-width: 570px) {
   .linkColumnsContainer {
     justify-content: space-between;
